manifest/objects/ALTF__Quicklink__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the Quicklinks to be used by Assessment and Qualifiers</description>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Criterion</label>
        <referenceTo>ALTF__Assessment_Question__c</referenceTo>
        <relationshipLabel>Quicklinks</relationshipLabel>
        <relationshipName>DM_Quicklinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Description__c</fullName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__RelatesTo__c</fullName>
        <label>Relates To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Word</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>PPT</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>ZIP</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Altify Quicklink</label>
    <listViews>
        <fullName>ALTF__All</fullName>
        <columns>NAME</columns>
        <columns>ALTF__Type__c</columns>
        <columns>ALTF__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quicklink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Quicklinks</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>